ci(test): testing

--- a/.travis.yml
+++ b/.travis.yml
@@ -26,10 +26,10 @@ before_install:
     - echo "package version $PACKAGE_VERSION"
 
 stages:
+  - deploy
   - build
   - test
   - release
-  - deploy
 
 jobs:
   include:
@@ -71,6 +71,7 @@ jobs:
         - 'lts/*'
       script:
         - targetVersion=$(git describe --tags `git rev-list --tags --max-count=1`)
+        - echo targetVersion
         - npx @rollup-umd/deploy --target-version ${targetVersion}
       deploy:
         - provider: pages
