--- a/.travis.yml
+++ b/.travis.yml
@@ -66,7 +66,7 @@ jobs:
 
     # Job: Page
     - stage: deploy
-      if: branch = master AND type = push AND fork = false
+      if: branch = dev AND type = push AND fork = false
       node_js:
         - 'lts/*'
       script:
