--- a/.travis.yml
+++ b/.travis.yml
@@ -71,7 +71,7 @@ jobs:
         - 'lts/*'
       script:
         - targetVersion=$(git describe --tags `git rev-list --tags --max-count=1`)
-        - echo targetVersion
+        - echo $targetVersion
         - npx @rollup-umd/deploy --target-version ${targetVersion}
       deploy:
         - provider: pages
