fix(dependencies): upgrade all dependencies

--- a/.travis.yml
+++ b/.travis.yml
@@ -26,10 +26,10 @@ before_install:
     - echo "package version $PACKAGE_VERSION"
 
 stages:
-  - deploy
   - build
   - test
   - release
+  - deploy
 
 jobs:
   include:
@@ -66,7 +66,7 @@ jobs:
 
     # Job: Page
     - stage: deploy
-      if: branch = dev AND type = push AND fork = false
+      if: branch = master AND type = push AND fork = false
       node_js:
         - 'lts/*'
       script:
