--- a/.travis.yml
+++ b/.travis.yml
@@ -53,7 +53,7 @@ jobs:
           organization: $(echo $TRAVIS_REPO_SLUG | awk -F '/' '{print $1}')
       script:
         - npm run test
-        - if [[ "$TRAVIS_BRANCH" != greenkeeper* && -z "$SONAR_TOKEN" ]]; then sonar-scanner -Dsonar.projectVersion=${SONAR_VERSION}; fi
+        - if [[ "$TRAVIS_BRANCH" != greenkeeper* && -n "$SONAR_TOKEN" ]]; then sonar-scanner -Dsonar.projectVersion=${SONAR_VERSION}; fi
 
     # Job: Release
     - stage: release
